--- a/frontend/src/app/exames/Components/exames/exames.component.scss
+++ b/frontend/src/app/exames/Components/exames/exames.component.scss
@@ -1,71 +1,89 @@
 .container {
   display: grid;
-  grid-column: 50%;
-  grid-template-rows: auto auto auto auto auto;
-  grid-template-columns: 12;
-  row-gap: 20px;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr ;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
 }
 
-.headerDiv {
-  background-color: blue;
-  padding: 10px;
-  border-radius: 5px;
-  color: white;
+.data-field-1 {
+  grid-row: 1/2;
+  grid-column: 1/4;
+  display: flex;
+  flex-direction: row;
 }
 
-.dropdown {
-  width: 40%;
-}
-
-.label {
-  width: 95%;
-  height: min-content;
-  align-items: center;
-}
-
-.title {
-  font-size: 1rem;
-  margin-left: 15px;
-  margin: 0px;
-}
-
-.tableContent {
-  width: 100%;
-  height: 100%;
-}
-
-.TableDiv {
-  width: 100%;
-}
-
-.form {
-  width: 100%;
-  height: min-content;
+.data-field-2 {
+  grid-row: 2/4;
+  grid-column: 1/3;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
 }
 
-.field-1 {
+.data-field-3 {
+  grid-row: 4/5;
+  grid-column: 1/5;
   display: grid;
-  grid-template-columns: 25% 25%;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 2fr 2fr;
+  column-gap: 10px;
 }
 
-field-2 {
-  display: grid;
-  grid-template-columns: 10% 10% 10%;
+.urgent-checkbox {
+  grid-column: 1/2;
 }
 
-.field-3 {
-  display: grid;
-  grid-template-columns: auto auto auto;
+.calendar-div {
+  grid-column: 2/3;
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdown-div {
+  grid-column: 3/4;
+  display: flex;
+  flex-direction: column;
 }
 
 .add-button {
-  grid-column-start: 1;
-  grid-column-end: 2;
+  grid-column: 1/2;
+  grid-row: 5/6;
+  padding: 5px;
+}
+
+.container-2 {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.lote-title {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  display: flex;
+  flex-direction: column;
+}
+
+.lote-field-1 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+}
+
+.lote-field-2 {
+  grid-column: 1/3;
+  grid-row: 2/3;
+  display: flex;
+  flex-direction: column;
+}
+
+.lote-button {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  padding: 5px;
 }
 
 .radial-button {
-  margin-right: 25px;
+  margin-right: 15px;
 }
