--- a/frontend/src/app/pacientes/formulario/dados-pessoais/paciente-form-dados-pessoais.component.html
+++ b/frontend/src/app/pacientes/formulario/dados-pessoais/paciente-form-dados-pessoais.component.html
@@ -1,27 +1,25 @@
 <div class="p-grid p-fluid" [formGroup]="formGroup">
+    <h4 class="p-md-6 p-sm-12" >Dados Pessoais</h4>
     <div class="p-col-12 p-grid">
-        <div nInputText label="Nome Completo" formControlName="nome" class="p-md-6 p-sm-12"></div>
-        <div nInputText label="Nome Social" formControlName="nomeSocial" class="p-md-6 p-sm-12"></div>
+        <div nInputText label="Nome Completo" formControlName="nome" class="p-md-2 p-sm-12"></div>
+        <div nInputText label="Nome Social" formControlName="nomeSocial" class="p-md-2 p-sm-12"></div>
+        <div nDropdown label="Sexo" [options]="opcoesDeSexo" formControlName="sexo" class="p-md-2 p-sm-12"></div>
+        <div nAutoComplete [service]="racaService" field="valor" formControlName="racaId" label="Raça/Cor" class="p-md-2 p-sm-12"></div>
+        <div nAutoComplete [service]="etniaService" field="valor" formControlName="etniaId" label="Etnia" class="p-md-2 p-sm-12"></div>
+        <div nAutoComplete [service]="estadoCivilService" field="valor" formControlName="estadoCivilId" label="Estado Civil" class="p-md-2 p-sm-12"></div>
     </div>
-    <div class="p-col-12 p-grid">
-        <div nDropdown label="Sexo" [options]="opcoesDeSexo" formControlName="sexo" class="p-md-3 p-sm-12"></div>
-        <div nAutoComplete [service]="racaService" field="valor" formControlName="racaId" label="Raça/Cor" class="p-md-3 p-sm-12"></div>
-        <div nAutoComplete [service]="etniaService" field="valor" formControlName="etniaId" label="Etnia" class="p-md-3 p-sm-12"></div>
-        <div nAutoComplete [service]="estadoCivilService" field="valor" formControlName="estadoCivilId" label="Estado Civil" class="p-md-3 p-sm-12"></div>
-    </div>
+
     <div class="p-col-12 p-grid" formGroupName="genitores">
         <div nInputMask mask="9999999/9" tooltip="Digite o número do prontuário da mãe do paciente." placeholder="_______/_" label="Prontuário da Mãe" formControlName="prontuarioDaMae" class="p-md-2 p-sm-12"></div>
-        <div nInputText label="Nome da Mãe" formControlName="nomeDaMae" class="p-md-5 p-sm-12"></div>
-        <div nInputText label="Nome do Pai" formControlName="nomeDoPai" class="p-md-5 p-sm-12"></div>
-    </div>
-    <div class="p-col-12 p-grid">
+        <div nInputText label="Nome da Mãe" formControlName="nomeDaMae" class="p-md-2 p-sm-12"></div>
+        <div nInputText label="Nome do Pai" formControlName="nomeDoPai" class="p-md-2 p-sm-12"></div>
         <div madreCalendar label="Data de Nascimento" formControlName="dataDeNascimento" class="p-md-2 p-sm-12" (onSelect)="aoSelecionarDataDeNascimento()" (onBlur)="aoSelecionarDataDeNascimento()"></div>
-        <div class="p-md-2 p-sm-12">
+        <!-- <div class="p-md-2 p-sm-12">
             <span class="p-float-label">
                 <p-calendar timeOnly="true" formControlName="horaDeNascimento"></p-calendar>
                 <label>Hora do Nascimento</label>
             </span>
-        </div>
+        </div> -->
         <div class="p-md-2 p-sm-12">
             <span class="md-inputfield p-float-label">
                 <input pInputText name="idade" type="text" value="0" disabled [(ngModel)]="idade" [ngModelOptions]="{ standalone: true }"/>
@@ -29,6 +27,9 @@
             </span>
         </div>
         <div nAutoComplete [service]="nacionalidadeService" field="valor" formControlName="nacionalidadeId" label="Nacionalidade" class="p-md-2 p-sm-12"></div>
+    </div>
+   
+    <div class="p-col-12 p-grid">
         <div class="p-md-2 p-sm-12">
             <span class="p-float-label">
                 <p-dropdown
@@ -36,7 +37,7 @@
                     [disabled]="!formGroup.value.nacionalidadeId"
                     [options]="ufs"
                     optionLabel="sigla"
-                    formControlName="uf"
+                    formControlName="ufId"
                     [filter]="true"
                     placeholder="UF"
                 ></p-dropdown>
@@ -46,7 +47,7 @@
             <span class="md-inputfield p-float-label">
                 <p-autoComplete
                     (completeMethod)="searchUnidade($event)"
-                    [disabled]="!formGroup.value.uf"
+                    [disabled]="!formGroup.value.ufId"
                     field="nome"
                     [suggestions]="naturalidades"
                     [dropdown]="true"
@@ -55,13 +56,10 @@
                 <label>Naturalidade</label>
             </span>
         </div>
+        <div nDropdown label="Grau de Instrução" [options]="opcoesDeGrauDeInstrucao" formControlName="grauDeInstrucao" class="p-md-2 p-sm-12"></div>
+        <div nAutoComplete [service]="ocupacaoService" field="valor" formControlName="ocupacaoId" label="Ocupação" class="p-md-2 p-sm-12"></div>
+        <div nAutoComplete [service]="religiaoService" field="valor" formControlName="religiaoId" label="Religião" class="p-md-2 p-sm-12"></div>
+        <div nInputText maxlength="254" type="email" label="E-mail" formControlName="email" class="p-md-2 p-sm-12"></div>
     </div>
-    <div class="p-col-12 p-grid">
-        <div nDropdown label="Grau de Instrução" [options]="opcoesDeGrauDeInstrucao" formControlName="grauDeInstrucao" class="p-md-4 p-sm-12"></div>
-        <div nAutoComplete [service]="ocupacaoService" field="valor" formControlName="ocupacaoId" label="Ocupação" class="p-md-4 p-sm-12"></div>
-        <div nAutoComplete [service]="religiaoService" field="valor" formControlName="religiaoId" label="Religião" class="p-md-4 p-sm-12"></div>
-    </div>
-    <div class="p-col-12 p-grid">
-        <div nInputText maxlength="254" type="email" label="E-mail" formControlName="email" class="p-col-12"></div>
-    </div>
+    
 </div>
