--- a/frontend/src/assets/layout/css/layout-teal.css
+++ b/frontend/src/assets/layout/css/layout-teal.css
@@ -1567,13 +1567,9 @@ body a {
 .layout-container .layout-mask {
   display: none;
 }
-/*.layout-container .layout-breadcrumb {
-  background-color: #ffffff;
-  box-shadow: inset 0 -2px 4px 0 rgba(0, 0, 0, 0.14);
-  -webkit-box-shadow: inset 0 -2px 4px 0 rgba(0, 0, 0, 0.14);
-  -moz-box-shadow: inset 0 -2px 4px 0 rgba(0, 0, 0, 0.14);
+.layout-container .layout-breadcrumb {
   min-height: 42px;
-}*/
+}
 .layout-container .layout-breadcrumb:before, .layout-container .layout-breadcrumb:after {
   content: "";
   display: table;
