--- a/frontend/src/assets/theme/teal/theme-light.css
+++ b/frontend/src/assets/theme/teal/theme-light.css
@@ -1415,12 +1415,12 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
   margin-top: 5px;
 }
 .p-button:enabled:hover {
-  background: rgba(0, 150, 136, 0.92);
+  background: #1FAAEE;
   color: #ffffff;
   border-color: transparent;
 }
 .p-button:enabled:active {
-  background: rgba(0, 150, 136, 0.68);
+  background: #1FAAEE;
   color: #ffffff;
   border-color: transparent;
 }
@@ -5705,7 +5705,7 @@ p-dropdown.ng-dirty.ng-invalid .p-dropdown:not(.p-disabled).p-focus {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   border: 1px solid transparent;
-  background: #f5f5f5 no-repeat;
+  background: #f5f5f500 no-repeat;
   background-image: linear-gradient(to bottom, #0267B0, #0267B0), linear-gradient(to bottom, rgba(0, 0, 0, 0.38), rgba(0, 0, 0, 0.38));
   background-size: 0 2px, 100% 1px;
   background-position: 50% 100%, 50% 100%;
