--- a/frontend/src/app/farmacia/farmacia/dispensacao/dispensacao.component.html
+++ b/frontend/src/app/farmacia/farmacia/dispensacao/dispensacao.component.html
@@ -8,7 +8,7 @@
                 <div class="p-md-2 p-sm-12">
                     <span class="p-float-label">
                         <input pInputText type="text" pTooltip="Informe o Nome." [(ngModel)]="nome" />
-                        <label>Nome</label>
+                        <label>Nome do Paciente</label>
                     </span>
                 </div>
     
