--- a/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
+++ b/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
@@ -110,11 +110,11 @@
     
                 <basis-datatable-button
                     ng-reflect-icon="pi pi-remove-red-eye"
-                    ng-reflect-b-tooltip="Escolha um registro para"
+                    ng-reflect-b-tooltip="Escolha um registro para visualizar"
                     class="ng-star-inserted"
                     [disabled]="datatable.selectedRow == null"
                     name="view"
-                    icon="pi pi-eye">
+                    >
                 </basis-datatable-button>
                 
                 <basis-datatable-button
