--- a/frontend/src/assets/theme/teal/theme-light.css
+++ b/frontend/src/assets/theme/teal/theme-light.css
@@ -5705,7 +5705,7 @@ p-dropdown.ng-dirty.ng-invalid .p-dropdown:not(.p-disabled).p-focus {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   border: 1px solid transparent;
-  background: #f5f5f5 no-repeat;
+  background: #f5f5f500 no-repeat;
   background-image: linear-gradient(to bottom, #0267B0, #0267B0), linear-gradient(to bottom, rgba(0, 0, 0, 0.38), rgba(0, 0, 0, 0.38));
   background-size: 0 2px, 100% 1px;
   background-position: 50% 100%, 50% 100%;
