--- a/frontend/src/app/pacientes/components/triagem/triagem.component.html
+++ b/frontend/src/app/pacientes/components/triagem/triagem.component.html
@@ -31,8 +31,7 @@
             </span>
 
             <div class="p-grid">
-                <basis-datatable disableEdit="disabled" disableView="disabled" disableDelete="disabled"
-                    [url]="searchUrl" [showPaginationFooter]="true"[rowsPerPageOptions]="rowsPerPageOptions" 
+                <basis-datatable [url]="searchUrl" [showPaginationFooter]="true"[rowsPerPageOptions]="rowsPerPageOptions" 
                     (buttonClick)="onClick($event)">
                     <p-column header="Nome do Paciente" field="paciente.nome">
                         <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
