Terminando de alterar o frontend BASIS-206716

--- a/frontend/src/app/pacientes/formulario/paciente-form.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-form.component.html
@@ -21,7 +21,7 @@
 
     <div class="card observacao">
         <h4 class="p-md-6 p-sm-12">Observação</h4>
-        <div class="p-grid p-fluid" [formGroup]="formGroup">
+        <div class="p-grid p-fluid" [formGroup]="paciente">
             <span class="p-float-label p-sm-12">
                 <textarea class = "p-md-2 p-sm-12"
                     formControlName="observacao"
