Add page view to render components.
Signed-off-by: yukioz <yukio.link@gmail.com>

--- a/frontend/src/app/exames/Components/exames/exames.component.html
+++ b/frontend/src/app/exames/Components/exames/exames.component.html
@@ -121,7 +121,7 @@
               </div>
             </p-tabPanel>
 
-            <!-- If needed, crete one button for each Tab view. then, change click method for each button. -->
+            <!-- If needed, crete one button for each Tab view. then, change and add a click method for each button. -->
             <button
               pButton
               label="Adicionar"
